# watclub-app

scraping/: pyproject.toml
scraping/data/design/: 20250819_231326.json  20250819_231925.json  20250819_233506.json  design_data.json
scraping/data/faculty/: 20250820_002300.json  20250820_002516.json  20250820_215459.json  20250820_215617.json  faculty_data.json
scraping/data/sports/: sports_data.json
scraping/data/wusa/: 20250815_002816.json  20250819_162310.json  20250819_163037.json  20250819_181953.json  20250819_185052.json  wusa_data.json
scraping/db/: sync.py
scraping/models/: organization.py
scraping/scrapers/: base.py  design.py  faculty.py  sports.py  tags.py  wusa.py
watclub/: package-lock.json  package.json  pnpm-lock.yaml
watclub/app/: globals.css  layout.tsx  page.tsx
watclub/app/api/club/: route.ts
watclub/app/api/clubs/: route.ts
watclub/app/club/[id]/: page.tsx
watclub/app/explore/: page.tsx
watclub/app/login/: page.tsx
watclub/app/profile/: page.tsx
watclub/app/signup/: page.tsx
watclub/app/test-users/: page.tsx
watclub/components/: AuthStatus.tsx  ClubCard.tsx  ClubsDisplay.tsx  Filter.tsx  Footer.tsx  Header.tsx  SearchBar.tsx  UserForm.tsx  arc-gallery-hero.tsx  theme-toggle.tsx
watclub/hooks/: useAuth.ts  useClubs.ts
watclub/lib/: AuthContext.tsx  ClubsContext.tsx  supabaseClient.ts  tags.ts
watclub/public/faculty/engsoc/: women-in-engineering.avif
watclub/public/sports/: uwdbc.avif
